--- a/styles/app.css
+++ b/styles/app.css
@@ -1,4 +1,3 @@
-/* General */
 * { box-sizing: border-box; }
 
 :root {
@@ -110,11 +109,9 @@ button {
 }
 
 .categoriesPreview-list, .categories-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2px;
 }
 
 
@@ -125,7 +122,7 @@ button {
 
 .header-container--long {
   background-image: url('https://pics.filmaffinity.com/Deadpool-777527803-large.jpg');
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.35) 19.27%, rgba(0, 0, 0, 0) 29.17%), url(https://pics.filmaffinity.com/Deadpool-777527803-large.jpg);
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0.35) 19.27%, rgba(0, 0, 0, 0) 29.17%), url('https://pics.filmaffinity.com/Deadpool-777527803-large.jpg');
   background-size: cover !important;
   height: 480px;
   position: fixed;
@@ -220,8 +217,7 @@ button {
   margin-bottom: 8px;
   cursor: pointer;
   white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+  
 }
 
 .category-title::before {
