--- a/styles/app.css
+++ b/styles/app.css
@@ -85,7 +85,11 @@ button {
   font-size: 14px;
   cursor: pointer;
 }
-
+img {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 /* Shared */
 .header-container, .trendingPreview-header, .categoriesPreview-container {
