--- a/styles/app.css
+++ b/styles/app.css
@@ -357,3 +357,69 @@ footer {
 .inactive {
   display: none;
 }
+
+/*ANIMATION*/
+@keyframes loading-skeleton {
+  0%, 100% {
+    opacity: 100%;
+  }
+  50%{
+    opacity: 0%;
+  }
+}
+/*LOADING SCREENS*/
+.movie-container--loading{
+  background: var(--purple-light-2);
+  border-radius: 8px;
+  height: 225px;
+  min-height: 225px;
+  max-height: 225px;
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 2s;
+}
+.movie-container--loading:nth-child(2){
+  animation-delay: .2s;
+}
+.movie-container--loading:nth-child(3){
+  animation-delay: .4s;
+}
+
+.category-container--loading {
+  background: var(--purple-light-2);
+  border-radius: 8px;
+  height: 25px;
+  min-height: 25px;
+  max-height: 25px;
+  width: 150px;
+  min-width: 150px;
+  max-width: 150px;
+  margin-bottom: 15px;
+  animation: loading-skeleton infinite 2s;
+}
+.category-container--loading:nth-child(2) {
+  animation-delay: .2s;
+}
+
+.relatedMovies-scrollContainer .movie-container--loading {
+  width: 125px;
+  min-width: 125px;
+  max-width: 125px;
+  height: 187.5px;
+  min-height: 187.5px;
+  max-height: 187.5px;
+}
+
+/*.header-container--long--loading{
+  background: var(--purple-light-2);
+  height: 480px;
+  min-height: 480px;
+  max-height: 480px;
+  top: 0;
+  width: 100%;
+  border-radius: 8px;
+
+  animation: loading-skeleton infinite 1.5s;
+}*/
